fix model creation

--- a/example.html
+++ b/example.html
@@ -48,7 +48,7 @@
 							Ext.define('AutocompleteResult', {
 								extend: 'Ext.data.Model',
 								config: {
-									fields: ['id','name']
+									fields: ['id',that.config.config.labelKey]
 								}
 							});
 						}
